--- a/0506-rwd/rwd_flexible-media/index.html
+++ b/0506-rwd/rwd_flexible-media/index.html
@@ -10,7 +10,7 @@
         <figure class="flexible-media">
             <img src="images/large-image.jpg">
         </figure>
-        <figure class="flexible-media">
+        <figure class="flexible-media flexible-video">
             <iframe src="https://www.youtube.com/embed/iFOxRDEdMJ0"></iframe>
         </figure>
     </section>
