--- a/0506-rwd/rwd_simplework/index.html
+++ b/0506-rwd/rwd_simplework/index.html
@@ -30,6 +30,7 @@ Released   : 20140225
 			<h1><a href="#">SimpleWork</a></h1>
 		</div>
 		<div id="menu">
+			<div class="menu-trigger"><a href="#">MENU</a></div>
 			<ul>
 				<li class="current_page_item"><a href="#" accesskey="1" title="">Homepage</a></li>
 				<li><a href="#" accesskey="2" title="">Our Clients</a></li>
