--- a/0506-rwd/rwd_simplework/index.html
+++ b/0506-rwd/rwd_simplework/index.html
@@ -29,9 +29,9 @@ Released   : 20140225
 		<div id="logo">
 			<h1><a href="#">SimpleWork</a></h1>
 		</div>
-		<div id="menu">
+		<div id="menu" class="">
 			<div class="menu-trigger"><a href="#">MENU</a></div>
-			<ul>
+			<ul id="my-ul">
 				<li class="current_page_item"><a href="#" accesskey="1" title="">Homepage</a></li>
 				<li><a href="#" accesskey="2" title="">Our Clients</a></li>
 				<li><a href="#" accesskey="3" title="">About Us</a></li>
