bs columns - push i pull

--- a/0507-bootstrap/bs_flexible-media/index.html
+++ b/0507-bootstrap/bs_flexible-media/index.html
@@ -11,7 +11,7 @@
         <figure class="flexible-media">
             <img src="images/large-image.jpg">
         </figure>
-        <figure class="flexible-media">
+        <figure class="flexible-media embed-responsive embed-responsive-16by9">
             <iframe src="https://www.youtube.com/embed/iFOxRDEdMJ0"></iframe>
         </figure>
     </section>
