--- a/0507-bootstrap/bs_thumbnails/index.html
+++ b/0507-bootstrap/bs_thumbnails/index.html
@@ -6,18 +6,20 @@
     <link rel="stylesheet" href="../bootstrap/bootstrap.min.css">
 </head>
 <body>
-    <section>
-        <figure><img src="images/thumbnail.png" all="Truskawka"></figure>
-        <figure><img src="images/thumbnail.png" all="Truskawka"></figure>
-        <figure><img src="images/thumbnail.png" all="Truskawka"></figure>
-        <figure><img src="images/thumbnail.png" all="Truskawka"></figure>
-        <figure><img src="images/thumbnail.png" all="Truskawka"></figure>
-        <figure><img src="images/thumbnail.png" all="Truskawka"></figure>
-        <figure><img src="images/thumbnail.png" all="Truskawka"></figure>
-        <figure><img src="images/thumbnail.png" all="Truskawka"></figure>
-        <figure><img src="images/thumbnail.png" all="Truskawka"></figure>
-        <figure><img src="images/thumbnail.png" all="Truskawka"></figure>
-        <figure><img src="images/thumbnail.png" all="Truskawka"></figure>
-        <figure><img src="images/thumbnail.png" all="Truskawka"></figure>
-    </section>
+<section class="container">
+    <div class="row">
+        <figure class="col-lg-2 col-md-3 col-sm-4 col-xs-6"><img src="images/thumbnail.png" alt="Truskawka" class="img-responsive img-thumbnail img-circle"></figure>
+        <figure class="col-lg-2 col-md-3 col-sm-4 col-xs-6"><img src="images/thumbnail.png" alt="Truskawka" class="img-responsive img-thumbnail img-circle"></figure>
+        <figure class="col-lg-2 col-md-3 col-sm-4 col-xs-6"><img src="images/thumbnail.png" alt="Truskawka" class="img-responsive img-thumbnail img-circle"></figure>
+        <figure class="col-lg-2 col-md-3 col-sm-4 col-xs-6"><img src="images/thumbnail.png" alt="Truskawka" class="img-responsive img-thumbnail img-circle"></figure>
+        <figure class="col-lg-2 col-md-3 col-sm-4 col-xs-6"><img src="images/thumbnail.png" alt="Truskawka" class="img-responsive img-thumbnail img-circle"></figure>
+        <figure class="col-lg-2 col-md-3 col-sm-4 col-xs-6"><img src="images/thumbnail.png" alt="Truskawka" class="img-responsive img-thumbnail img-circle"></figure>
+        <figure class="col-lg-2 col-md-3 col-sm-4 col-xs-6"><img src="images/thumbnail.png" alt="Truskawka" class="img-responsive img-thumbnail img-circle"></figure>
+        <figure class="col-lg-2 col-md-3 col-sm-4 col-xs-6"><img src="images/thumbnail.png" alt="Truskawka" class="img-responsive img-thumbnail img-circle"></figure>
+        <figure class="col-lg-2 col-md-3 col-sm-4 col-xs-6"><img src="images/thumbnail.png" alt="Truskawka" class="img-responsive img-thumbnail img-circle"></figure>
+        <figure class="col-lg-2 col-md-3 col-sm-4 col-xs-6"><img src="images/thumbnail.png" alt="Truskawka" class="img-responsive img-thumbnail img-circle"></figure>
+        <figure class="col-lg-2 col-md-3 col-sm-4 col-xs-6"><img src="images/thumbnail.png" alt="Truskawka" class="img-responsive img-thumbnail img-circle"></figure>
+        <figure class="col-lg-2 col-md-3 col-sm-4 col-xs-6"><img src="images/thumbnail.png" alt="Truskawka" class="img-responsive img-thumbnail img-circle"></figure>
+    </div>
+</section>
 </body>
