--- a/0507-bootstrap/bs_columns/index.html
+++ b/0507-bootstrap/bs_columns/index.html
@@ -5,10 +5,13 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="../bootstrap/bootstrap.min.css">
     <link rel="stylesheet" href="styles.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
 </head>
 <body>
-    <section>
-        <article class="content">Content</article>
-        <aside class="sidebar">Sidebar</aside>
+    <section class="container">
+        <div class="row">
+            <article class="content col-sm-8 col-md-6 col-sm-push-4 col-md-push-6">Content</article>
+            <aside class="sidebar col-sm-4 col-md-6 col-sm-pull-8 col-md-pull-6">Sidebar</aside>
+        </div>
     </section>
 </body>
