--- a/0507-bootstrap/bs_signin/sign-in.html
+++ b/0507-bootstrap/bs_signin/sign-in.html
@@ -6,20 +6,20 @@
     <link rel="stylesheet" href="../bootstrap/bootstrap.min.css">
 </head>
 <body>
-<section>
-    <form>
-        <div>
+<section class="container">
+    <form class="">
+        <div class="form-group">
             <label for="inputEmail">Email</label>
-            <input type="email" id="inputEmail" placeholder="Email">
+            <input type="email" class="form-control" id="inputEmail" placeholder="Email">
         </div>
-        <div>
+        <div class="form-group">
             <label for="inputPassword">Password</label>
-            <input type="password" id="inputPassword" placeholder="Password">
+            <input type="password" class="form-control" id="inputPassword" placeholder="Password">
         </div>
-        <div>
+        <div class="checkbox">
             <label><input type="checkbox"> Remember me</label>
         </div>
-        <button type="submit">Login</button>
+        <button type="submit" class="btn btn-success">Login</button>
     </form>
 </section>
 </body>
