--- a/0507-bootstrap/bs_signup/sign-up.html
+++ b/0507-bootstrap/bs_signup/sign-up.html
@@ -6,89 +6,51 @@
     <link rel="stylesheet" href="../bootstrap/bootstrap.min.css">
 </head>
 <body>
-<section>
+<section class="container">
     <h1>Sign Up</h1>
-    <form>
-        <div>
-            <label for="inputEmail">Email:</label>
-            <div>
-                <input type="email" id="inputEmail" placeholder="Email">
+    <form class="form-horizontal">
+        <div class="form-group">
+            <label for="inputEmail" class="control-label col-lg-3">Email:</label>
+            <div class="col-lg-4">
+                <input type="email" id="inputEmail" class="form-control" placeholder="Email">
             </div>
         </div>
-        <div>
-            <label for="inputPassword">Password:</label>
-            <div>
-                <input type="password" id="inputPassword" placeholder="Password">
+        <div class="form-group">
+            <label class="control-label col-lg-3">Date of Birth:</label>
+            <div class="col-lg-3">
+                <select class="form-control">
+                    <option>Date</option>
+                </select>
+            </div>
+            <div class="col-lg-3">
+                <select class="form-control">
+                    <option>Month</option>
+                </select>
+            </div>
+            <div class="col-lg-3">
+                <select class="form-control">
+                    <option>Year</option>
+                </select>
             </div>
         </div>
-        <div>
-            <label for="confirmPassword">Confirm Password:</label>
-            <div>
-                <input type="password" id="confirmPassword" placeholder="Confirm Password">
+        <div class="form-group">
+            <label for="postalAddress" class="control-label col-lg-3">Address:</label>
+            <div class="col-lg-5">
+                <textarea rows="3" id="postalAddress" class="form-control" placeholder="Postal Address"></textarea>
             </div>
         </div>
-        <div>
-            <label for="firstName">First Name:</label>
-            <div>
-                <input type="text" id="firstName" placeholder="First Name">
+        <div class="form-group">
+            <div class="col-lg-9 col-lg-offset-3">
+                <div class="checkbox">
+                    <label>
+                        <input type="checkbox" value="news"> Send me latest news and updates.
+                    </label>
+                </div>
             </div>
         </div>
-        <div>
-            <label for="lastName">Last Name:</label>
-            <div>
-                <input type="text" id="lastName" placeholder="Last Name">
-            </div>
-        </div>
-        <div>
-            <label for="phoneNumber">Phone:</label>
-            <div>
-                <input type="tel" id="phoneNumber" placeholder="Phone Number">
-            </div>
-        </div>
-        <div>
-            <label>Date of Birth:</label>
-            <select>
-                <option>Date</option>
-            </select>
-            <select>
-                <option>Month</option>
-            </select>
-            <select>
-                <option>Year</option>
-            </select>
-        </div>
-        <div>
-            <label for="postalAddress">Address:</label>
-            <textarea rows="3" id="postalAddress" placeholder="Postal Address"></textarea>
-        </div>
-        <div>
-            <label for="ZipCode">Zip Code:</label>
-            <input type="text" id="ZipCode" placeholder="Zip Code">
-        </div>
-        <div>
-            <label>Gender:</label>
-            <label>
-                <input type="radio" name="genderRadios" value="male"> Male
-            </label>
-            <label>
-                <input type="radio" name="genderRadios" value="female"> Female
-            </label>
-        </div>
-        <div>
-            <label>
-                <input type="checkbox" value="news"> Send me latest news and updates.
-            </label>
-        </div>
-        <div>
-            <div>
-                <label>
-                    <input type="checkbox" value="agree">  I agree to the <a href="#">Terms and Conditions</a>.
-                </label>
-            </div>
-        </div>
-        <div>
-            <input type="submit" value="Submit">
-            <input type="reset" value="Reset">
+        <div class="col-lg-9 col-lg-offset-3">
+            <input type="submit" class="btn btn-success" value="Submit">
+            <input type="reset" class="btn btn-danger" value="Reset">
         </div>
     </form>
 </section>
