--- a/0507-bootstrap/test.html
+++ b/0507-bootstrap/test.html
@@ -19,6 +19,42 @@
 </head>
 <body>
 
+<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+    <!-- Indicators -->
+    <ol class="carousel-indicators">
+        <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+        <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+        <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+    </ol>
+
+    <!-- Wrapper for slides -->
+    <div class="carousel-inner" role="listbox">
+        <div class="item active">
+            <img src="bs_flowerclusters/images/pic03.jpg" alt="...">
+            <div class="carousel-caption">
+               qweqwqwe
+            </div>
+        </div>
+        <div class="item">
+            <img src="bs_flowerclusters/images/pic02.jpg" alt="...">
+            <div class="carousel-caption">
+                qwewqeeqwqew
+            </div>
+        </div>
+        ...
+    </div>
+
+    <!-- Controls -->
+    <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+        <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+    </a>
+    <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+        <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+    </a>
+</div>
+
 
 <nav class="navbar navbar-default">
     <div class="container-fluid">
