--- a/0625-jquery/0.sandbox.html
+++ b/0625-jquery/0.sandbox.html
@@ -9,9 +9,11 @@
 <script src="lib/jquery-2.1.4.min.js"></script>
 <script>
 	/* tutaj możesz testować różne pomysły */
-
+    $(p.isa).hide()
 
 </script>
+
+<h1>nagłówek</h1>
 
 
 
