--- a/0625-jquery/4.hazard.html
+++ b/0625-jquery/4.hazard.html
@@ -10,9 +10,16 @@
 <script>
 	/* Popraw kod poniżej w taki sposób, aby elementy o klasie "isa" zostały ukryte */
 
-	$('.isa').slideUp(1000);
-	$('.isa').slideDown(1000);
-	$('.isa').fadeOut(500);
+//	$('.isa').slideUp(1000);
+//	$('.isa').slideDown(1000);
+//	$('.isa').fadeOut(500);
+
+
+$(function() {
+    $('.isa').slideDown(1000).slideUp(1000).fadeOut(500);
+}); //document ready - bo inaczej jquerry nie wie, że te elementy już są.
+	//albo trzeba przenieść kod na dół
+
 
 </script>
 
