--- a/0625-jquery/2.events.html
+++ b/0625-jquery/2.events.html
@@ -14,7 +14,7 @@
 <p class="nie-klikalny">Element 6</p>
 
 
-<script src="../lib/jquery-2.1.4.min.js"></script>
+<script src="lib/jquery-2.1.4.min.js"></script>
 
 
 <script>
@@ -24,6 +24,12 @@
 
 		 	2. Po dwukrotnym kliknięciu chowamy element
 		 */
+
+var $klikalny = $('p.klikalny');
+$klikalny.dblclick(function () {
+	$(this).hide();
+});
+
 </script>
 
 
