--- a/0625-jquery/6.menu.html
+++ b/0625-jquery/6.menu.html
@@ -3,34 +3,44 @@
 <head lang="en">
 	<meta charset="UTF-8">
 	<title>6.menu</title>
+	<script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
+
 </head>
+
+<style>
+a.collapsed:before {
+	content: '+ ';
+}
+
+
+a:before {
+	content: '- ';
+}
+
+</style>
 <body>
 
 <ul>
-	<li>
+	<li id="menu"><a href="#">
 		MENU
-		<ul>
-			<li>
-				strona główna
+	</a><ul class="active">
+			<li><a>strona glowna</a>
 			</li>
-			<li>
-				produkty
-				<ul>
+			<li><a href="#">Produkty</a>
+<ul>
 					<li>produkt A</li>
 					<li>produkt B</li>
 					<li>produkt C</li>
 				</ul>
 			</li>
-			<li>
-				sklepy
+			<li><a href="#">sklepy</a>
 				<ul>
 					<li>sklep 1</li>
 					<li>sklep 2</li>
 					<li>sklep 3</li>
-				</ul>
+					</ul>
 			</li>
-			<li>
-				firma
+			<li><a href="#">firma</a>
 				<ul>
 					<li>informacje</li>
 					<li>kariera</li>
@@ -44,10 +54,22 @@
 <script>
 	/*
 	 Z użyciem jQuery zamień powyższe listy w rozwijane menu, tj.:
-	 1. kliknięcie w nadrzędny element zwija wszystkie podrzędne
 	 2. kliknięcie w zwiniętą gałąź rozwija wszystkie elementy najblizszego poziomu (1 poziom wgłąb)
 	 3. przy zwiniętej pozycji pokazuj znaczek + a przy rozwiniętej -
-	*/
+	 */
+
+
+    $("a").click(function() {
+
+        $(this).toggleClass('collapsed').siblings().toggle(500);
+          });
+
+
+
+
+
+
+
 </script>
 
 </body>
